<resources>
    <string name="app_name">中基云</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ping_pay">PingPayActivity</string>
    <string name="appName">demoapp</string>
    <string name="ok">完成</string>
    <string name="wechat">微信</string>
    <string name="alipay">支付宝</string>
    <string name="upmp">银联</string>
    <string name="bfb">百度钱包</string>
    <string name="jdpay">京东支付</string>
    <string name="confirm">确认</string>
    <string name="yuan">元</string>
    <string name="donateFailMessage">\u3000\u3000感谢你的爱心，\n但是系统出现了一些错误</string>
    <string name="validationErrors">错误</string>
    <string name="notInstalled">未安装支付软件</string>
    <string name="amount">支付金额</string>
    <string name="missingImage">图片加载失败</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="main_tab1">所在地区</string>
    <string name="main_tab2">项目进展</string>
    <string name="main_tab3">排序</string>
    <string name="title_activity_news_center">NewsCenterActivity</string>
    <string name="title_activity_cooperation">CooperationActivity</string>
    <string name="title_activity_service_provider">ServiceProviderActivity</string>
    <string name="title_activity_service_particulars">ServiceParticularsActivity</string>
    <string name="title_activity_my_extruder">MyExtruderActivity</string>
    <string name="title_activity_add_extruder">AddExtruderActivity</string>
    <string name="title_activity_sell_extruder">SellExtruderActivity</string>
    <string name="title_activity_extruder_particulars">ExtruderParticularsActivity</string>
    <string name="title_activity_second_hand">SecondHandActivity</string>
    <string name="title_activity_attention_project">AttentionProjectActivity</string>
    <string name="title_activity_attention_extrun">AttentionExtrunActivity</string>
    <string name="title_activity_my_competitve_tender">MyCompetitveTenderActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_my_red_packet">MyRedPacketActivity</string>
    <string name="title_activity_perdonal_daata">PerdonalDaataActivity</string>
    <string name="title_activity_cooperation_particulas">CooperationParticulasActivity</string>
    <string name="title_activity_exturder_particulars">ExturderParticularsActivity</string>
    <string name="title_activity_seek_machinist_particulas">SeekMachinistParticulasActivity</string>
    <string name="title_activity_seek_project_particulars">SeekProjectParticularsActivity</string>
    <string name="title_activity_home_more_project">HomeMoreProjectActivity</string>
    <string name="title_activity_news_list_particulars">NewsListParticularsActivity</string>
    <string name="title_activity_register_fish">RegisterFishActivity</string>
    <string name="title_activity_home_market">HomeMarketActivity</string>
    <string name="upload_pic">上传图片</string>
    <string name="select_local_img">从相册选择</string>
    <string name="Photograph">拍照</string>
    <string name="picture_cutting">图片裁剪</string>
    <string name="images">图片</string>
    <string name="all_images">所有图片</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
</resources>